# esp-ota

ESP32-OTA-BLE/: README.md  sdkconfig
ESP32-OTA-BLE/main/: app_main.c  idf_component.yml
ESP32-OTA-BLE/python/: main.py
ESP32-OTA-WIFI/: CMakeLists.txt  README.md  python_server.py  sdkconfig
ESP32-OTA-WIFI/main/: CMakeLists.txt  Kconfig.projbuild  boot.c  boot.h  ota.c  ota.h  wifi.c  wifi.h  wifi_ota.c
ESP32-OTA-WIFI/server/: version.json
ESP32-OTA-ZIGBEE/: README.md
ESP32-OTA-ZIGBEE/ESP32-OTA-ZIGBEE-CLIENT/: CMakeLists.txt  partitions.csv  sdkconfig
ESP32-OTA-ZIGBEE/ESP32-OTA-ZIGBEE-CLIENT/main/: CMakeLists.txt  esp_ota_client.c  esp_ota_client.h
ESP32-OTA-ZIGBEE/ESP32-OTA-ZIGBEE-SERVER/: CMakeLists.txt  sdkconfig
ESP32-OTA-ZIGBEE/ESP32-OTA-ZIGBEE-SERVER/main/: CMakeLists.txt  esp_ota_server.c  esp_ota_server.h  idf_component.yml
